WIP: Google + Login

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,8 +10,8 @@
       <button menuClose ion-item (click)="goHome()">
         Home
       </button>
-      <button menuClose ion-item (click)="goList()">
-        List
+      <button menuClose ion-item (click)="doGoogleLogin()">
+        Google +
       </button>
     </ion-list>
   </ion-content>
